--- a/DPA-Files/src/Containers/App.css
+++ b/DPA-Files/src/Containers/App.css
@@ -8,19 +8,23 @@
     background-color: rgb(196, 196, 250);
     border-radius: 5px;
     width: 60%;
-    height: max-content;
+    height: 10vh;
     margin: 7px;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     padding: 0.6rem;
     text-align: center;
-    font-size: 1.8vmax;
+    font-size: 1.5vmax;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 @media(max-width: 600px){
     .Doctor{
         width: 88%;
         height: max-content;
+    }
+    .Details{
+        display: none;
+        /* opacity: 0; */
     }
 }
 @media(min-width: 601px){
@@ -29,13 +33,26 @@
         width: 90%;
     }
     .Container{
-        max-width: 60%;
+        position: absolute;
+        left: 2%;
+        max-width: 50%;
         padding: 1rem;
     }
     .fake-body{
         display: inline-flex;
         justify-content: start;
         align-items: flex-start;
+    }
+    .Details{
+        display: flex;
+        position: fixed;
+        right: 4px;
+        top: 20%;
+        width: 45%;
+        height: 78%;
+        z-index: 1;
+        background-color: lightseagreen;
+        box-shadow: 0 0 10px rgb(177, 176, 176);
     }
 }
 .fake-body{
@@ -63,8 +80,10 @@
     width: 5vh;
     height: 5vh;
     background-color: black;
-    z-index: 2;
-    left: 10px;
+    z-index: 1;
+    left: 3px;
+    top: 3px;
+    /* left: 10px; */
 }
 /* .fake-profile{
     display: block;
@@ -76,8 +95,10 @@
 } */
 .Content{
     position: relative;
-    display: flex;
-    z-index: 3;
+    display: inline-block;
+    z-index: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .Container{
     position: absolute;
@@ -96,6 +117,16 @@
     background-color:  rgb(245, 241, 245);
     padding: 3px;
 }
+.Details{
+    /* display:block; */
+    border: 5px solid #ccc;
+    border-radius: 5px;
+    background-color: rgb(245, 241, 245);
+    justify-content: center;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* .overall-container{
     display: block;
     margin: 0;
