--- a/DPA-Files/src/Containers/App.css
+++ b/DPA-Files/src/Containers/App.css
@@ -17,14 +17,58 @@
     font-size: 1.5vmax;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.Details-container{
+    display: none;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    z-index: 499;
+}
+.fake-Details{
+    display: flex;
+    position: fixed;
+    right: 4px;
+    top: 20%;
+    width: 45%;
+    height: 78%;
+    z-index: 501;
+    border: 5px solid #ccc;
+    border-radius: 5px;
+    background-color: rgb(245, 241, 245);
+    justify-content: center;
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
 @media(max-width: 600px){
     .Doctor{
         width: 88%;
         height: max-content;
     }
-    .Details{
+    .Details-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 499;
+        opacity: 0.75;
+        background-color: black;
+    }
+    .fake-Details{
         display: none;
-        /* opacity: 0; */
+    }
+    .Details{
+        display: flex;
+        position: fixed;
+        width: 90%;
+        height: 75%;
+        z-index: 600;
+        top: 10%;
+        opacity: 1;
+        background-color: honeydew;
     }
 }
 @media(min-width: 601px){
@@ -43,6 +87,9 @@
         justify-content: start;
         align-items: flex-start;
     }
+    .Details-container{
+        opacity: 1;
+    }
     .Details{
         display: flex;
         position: fixed;
@@ -50,16 +97,17 @@
         top: 20%;
         width: 45%;
         height: 78%;
-        z-index: 1;
-        background-color: lightseagreen;
+        z-index: 501;
         box-shadow: 0 0 10px rgb(177, 176, 176);
+    }
+    .close{
+        display: none;
     }
 }
 .fake-body{
     position: relative;
     display: flex;
     flex-direction: column;
-    /* justify-content: ; */
     align-items: center;
     flex-wrap: nowrap;
     overflow-y: scroll;
@@ -71,9 +119,9 @@
     left: 0;
     z-index: 1;
 }
-/* .Container::-webkit-scrollbar{
+.fake-body::-webkit-scrollbar{
     display: none;
-} */
+}
 .Profile{
     position: absolute;
     border-radius: 50%;
@@ -84,6 +132,22 @@
     left: 3px;
     top: 3px;
     /* left: 10px; */
+}
+.close{
+    display: flex;
+    color: blanchedalmond;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    background-color: black;
+    opacity: 0.75;
+    z-index: 500;
+    top: 1px;
+    right: 1px;
+    font-weight: lighter;
 }
 /* .fake-profile{
     display: block;
@@ -119,11 +183,12 @@
 }
 .Details{
     /* display:block; */
+    opacity: 1;
     border: 5px solid #ccc;
     border-radius: 5px;
     background-color: rgb(245, 241, 245);
     justify-content: center;
-    text-align: center;
+    align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
