--- a/DPA-Files/src/Containers/App.css
+++ b/DPA-Files/src/Containers/App.css
@@ -1,22 +1,8 @@
-/* .Signup{
-    width: 50%;
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 5px solid black;
-    border-radius: 10px;
-    min-width: 230px;
-    min-height: 230px;
-} */
-/* @import url("https://fonts.googleapis.com/css?family=Nunito:600,700&display=swap"); */
+@import url("https://fonts.googleapis.com/css?family=Nunito:600,700&display=swap");
 .Doctor{
     display: flex;
-    /* flex-direction: row; */
     position: relative;
     z-index: 1;
-    /* user-select: none; */
     align-items: center;
     justify-content: center;
     background-color: rgb(196, 196, 250);
@@ -27,9 +13,6 @@
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     padding: 0.6rem;
-    /* text-align: center; */
-    /* font-size: 95%; */
-    /* font-family: Nunito, sans-serif; */
 }
 .Doctor:active{
     box-shadow: 0 0 5px #ccc;
@@ -40,12 +23,10 @@
     width: 77%;
 }
 .Details-container{
-    /* display: none; */
     position: relative;
     margin: 0;
     padding: 0;
     background-color: black;
-    /* z-index: 499; */
 }
 .fake-Details{
     display: flex;
@@ -54,7 +35,7 @@
     top: 20%;
     width: 45%;
     height: 78%;
-    max-height: 600px;
+    max-height: 500px;
     z-index: 501;
     border: 5px solid #ccc;
     border-radius: 5px;
@@ -131,7 +112,6 @@
         box-shadow: 0 0 5px #ccc;
         width: 75%;
         height: calc( 10vh - 10px );
-        /* font-size: 1.3vmax; */
     }
 }
 .fake-body{
@@ -182,14 +162,6 @@
     top: 5px;
     right: 5px;
 }
-
-/* .Content{
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-} */
 .Container{
     position: absolute;
     top: 20%;
@@ -201,7 +173,7 @@
     width: 90%;
     height: fit-content;
     min-height: 80%; 
-    z-index: 1;
+    z-index: 3;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color:  rgb(245, 241, 245);
@@ -216,31 +188,16 @@
     background-color: rgb(245, 241, 245);
     justify-content: center;
     align-items: center;
-    /* font-family: Nunito, sans-serif; */
 }
-
-/* .overall-container{
-    display: block;
-    margin: 0;
-    padding: 0;
-    bottom: 0;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    left: 0;
-    z-index: 1;
-} */
 .MyProfile{
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
     width: 100%;
     height: 25%;
     background-color: rgb(24, 88, 207);
-    z-index: 0;
+    z-index: 2;
     top: 0;
 }
 .body{
@@ -255,35 +212,23 @@
     left: 0;
     width: 100%;
     background-color: rgb(223, 220, 217);
-    z-index: -1;
+    z-index: -5;
     overflow-y: scroll;
+    font-family: Nunito, Roboto, Arial, sans-serif;
 }
-/* .body2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgb(75, 99, 204);
-    z-index: -1;
-    overflow-y: scroll;
-} */
-/* .startup{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+
+.fake-body2{
     position: fixed;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    /* overflow-y: scroll; */
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     top: 0;
     left: 0;
-    width: 100%;
-    background-color: rgb(223, 220, 217);
-    z-index: -1;
-} */
+    z-index: -3; 
+}
