--- a/DPA-Files/src/Components/Login/Login.css
+++ b/DPA-Files/src/Components/Login/Login.css
@@ -181,9 +181,10 @@
     height: 30px;
 }
 .docpat{
+  /* display: inline-flex; */
   border: 0;
   width: max-content;
-  padding: 5px;
+  padding: 3px;
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -196,9 +197,13 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.13);
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
-  margin: 5px;
+  margin: 3px;
 }
 #signas{
     background-color: rgb(42, 165, 73);
     /* background-color: rgb(204, 202, 66); */
+}
+.inline{
+  height: fit-content;
+  width: fit-content;
 }
