--- a/DPA-Files/src/Components/Login/Login.css
+++ b/DPA-Files/src/Components/Login/Login.css
@@ -10,7 +10,8 @@
   padding-top: 10%;
   font-family: Nunito, Roboto, Arial, sans-serif;
   background: #4D6FE5;
-  height: 100vh;
+  /* height: 100vh; */
+  min-height: 100vh;
   position: relative;
   top: 0;
   left: 0;
@@ -193,7 +194,7 @@
   color: #fff;
   font-size: 1rem;
   font-family: Nunito, sans-serif;
-  background: #6381e8;
+  background: #5270d3;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.13);
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
