--- a/DPA-Files/src/Components/Login/Login.css
+++ b/DPA-Files/src/Components/Login/Login.css
@@ -208,3 +208,92 @@
   height: fit-content;
   width: fit-content;
 }
+
+.loading{
+  width:25%;
+  position: absolute;
+  top: 1%;
+  z-index: 1000;
+  height: fit-content;
+  background-color: #4D6FE5;
+}
+
+@media(max-width:600px){
+  .loading{
+    width: 90%;
+    position: absolute;
+    z-index: 1000;
+    top: 1%;
+    height: fit-content;
+  }
+}
+
+#main{
+  margin-top: 1px;   
+}
+
+#a{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: green;
+  animation: a1 4s infinite;
+  position: absolute;
+}
+
+#b{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: yellow;
+  position: absolute;
+  animation: a2 4s infinite;
+  
+ 
+}
+
+#c{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: red;
+ position: absolute;
+  animation: a3 4s infinite;
+}
+#d{   
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color:#4285F4 ;
+ position: absolute;
+  animation: a4 4s infinite;
+
+}
+
+
+@keyframes a1{
+  0%{margin-left: -3px;}
+  50%{margin-left:50% ;}
+  100%{margin-left: 100%;}
+}
+
+@keyframes a2{
+  10%{margin-left: -3px;}
+  50%{margin-left:45% ;}
+  60%{margin-left:45% ;}
+ 100%{margin-left: 100%;}
+}
+
+@keyframes a3{
+  15%{margin-left: -3px;}
+  50%{margin-left:40% ;}
+  65%{margin-left:40% ;}
+  100%{margin-left: 100%;}
+}
+
+@keyframes a4{
+  20%{margin-left: -3px;}
+  50%{margin-left:35% ;}
+  70%{margin-left:35% ;}
+  100%{margin-left: 100%;}
+}
